    When using Emscripten 4.0.10+, backend now defaults to IMGUI_IMPL_WEBGPU_BACKEND_DAWN
    instead of IMGUI_IMPL_WEBGPU_BACKEND_WGPU, if neither are specified.
    (note: examples application were not updated yet)
  - Win32: Revert 1.92.4 change of comparing dwPacketNumber, which prevents
    refreshing accurate gamepad info after focus-out + io.ClearInputKeys(). (#8556)
- Examples:
  - GLFW+WebGPU: update example for latest specs, to work on Emscripten 4.0.10+,
    latest Dawn-Native and WGPU-Native. (#8381, #8567, #8191, #7435) [@brutpitt]
  - GLFW+WebGPU: removed unnecessary ImGui_ImplWGPU_InvalidateDeviceObjects() call
    during surface resize. (#8381)
  - SDL2+WebGPU: added new example (Emscripten + native Dawn/WGPU). (#8381) [@brutpitt]
  - SDL3+WebGPU: added new example (Emscripten + native Dawn/WGPU). (#8381) [@brutpitt]


-----------------------------------------------------------------------
 VERSION 1.92.4 (Released 2025-10-14)
-----------------------------------------------------------------------

Decorated log and release notes: https://github.com/ocornut/imgui/releases/tag/v1.92.4

Breaking Changes:

- Backends:
  - TreeNode, Selectable, Clipper: commented out legacy names obsoleted in
    1.89.7 (July 2023) and 1.89.9 (Sept 2023):
      ImGuiTreeNodeFlags_AllowItemOverlap       --> ImGuiTreeNodeFlags_AllowOverlap
      ImGuiSelectableFlags_AllowItemOverlap     --> ImGuiSelectableFlags_AllowOverlap
      ImGuiListClipper::IncludeRangeByIndices() --> ImGuiListClipper::IncludeItemsByIndex()
  - Vulkan: moved some fields in ImGui_ImplVulkan_InitInfo:
      init_info.RenderPass  --> init_info.PipelineInfoMain.RenderPass
      init_info.Subpass     --> init_info.PipelineInfoMain.Subpass
      init_info.MSAASamples --> init_info.PipelineInfoMain.MSAASamples
      init_info.PipelineRenderingCreateInfo --> init_info.PipelineInfoMain.PipelineRenderingCreateInfo
    It makes things more consistent and was desirable to introduce new settings for